# dsynkant

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO.org  configure  configure.ac  reconf
doc/: Makefile.am  Makefile.in  commit-documentation
doc/D-50/: README.md
doc/blueprint/: Makefile.am  Makefile.in  commit-blueprint  dsynkant-blueprint.tex  pulsewidth.eps  pulsewidth.fig
doc/manual/: Makefile.am  Makefile.in  commit-manual  dsynkant-manual.tex
src/: CMakeLists.txt  Makefile.am  Makefile.in  dssidsynkant.cpp  dssidsynkant.hpp  vstdsynkant.cpp  vstdsynkant.hpp
src/dssi/: CMakeLists.txt  Makefile.am  Makefile.in  dssiplugin.cpp  dssiplugin.hpp
src/dsynkant/: CMakeLists.txt  Makefile.am  Makefile.in  dsynkant.cpp  dsynkant.hpp
src/dsynkant/commondef/: Makefile.am  Makefile.in  commondef.cpp  commondef.hpp
src/dsynkant/engine/: Makefile.am  Makefile.in  engine.cpp  engine.hpp  tone.cpp  tone.hpp  voice.cpp  voice.hpp
src/dsynkant/set/: Makefile.am  Makefile.in  address.cpp  address.hpp  bank.cpp  bank.hpp  baseenvelope.cpp  baseenvelope.hpp  basekeybias.cpp  basekeybias.hpp  basemodulation.cpp  basemodulation.hpp  chorus.cpp  chorus.hpp  common.cpp  common.hpp  eq.cpp  eq.hpp  lfo.cpp  lfo.hpp  partial.cpp  partial.hpp  patch.cpp  patch.hpp  patchparameter.cpp  patchparameter.hpp  set.cpp  set.hpp  tva.cpp  tva.hpp  tvf.cpp  tvf.hpp  tvp.cpp  tvp.hpp  wg.cpp  wg.hpp
