add_library(dsynkant SHARED
  dsynkant
  commondef/commondef
  engine/engine
  engine/voice
  set/address
  set/bank
  set/baseenvelope
  set/basekeybias
  set/basemodulation
  set/chorus
  set/common
  set/eq
  set/lfo
  set/partial
  set/patch
  set/patchparameter
  set/set
  set/tva
  set/tvf
  set/tvp
  set/wg
  set/address)
