noinst_LTLIBRARIES = libset.la 
libset_la_SOURCES = \
	baseenvelope.hpp baseenvelope.cpp \
	basekeybias.hpp basekeybias.cpp \
	basemodulation.hpp basemodulation.cpp \
	tva.hpp tva.cpp \
	tvf.hpp tvf.cpp \
	wg.hpp wg.cpp \
	tvp.hpp tvp.cpp \
	partial.hpp partial.cpp \
	chorus.hpp chorus.cpp \
	common.hpp common.cpp \
	eq.hpp eq.cpp \
	lfo.hpp lfo.cpp \
	patchparamter.hpp patchparameter.cpp \
	patch.hpp patch.cpp \
	bank.hpp bank.cpp \
	set.hpp set.cpp \
	address.hpp address.cpp

libset_la_CXXFLAGS = -fvisibility=hidden
